# ACDD

./: .gitignore  ACDD-METHODOLOGY.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docs.yml  lint.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
docs/: docfx.json  index.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md
scripts/bash/: acdd-adapt-validate.sh  acdd-adapt.sh  acdd-learn.sh  acdd-validate.sh  adapt-methodology.sh  check-prerequisites.sh  common.sh  create-new-feature.sh  learn-outcomes.sh  setup-acdd-project.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: acdd-adapt.ps1  acdd-learn.ps1  acdd-validate.ps1  adapt-methodology.ps1  common.ps1  learn-outcomes.ps1  setup-acdd-project.ps1  update-agent-context.ps1
src/acdd_cli/: __init__.py
templates/: ACDD-SUMMARY.md  ACDD.md  acdd-checklist.md  acdd-tasks-template.md  adapt-template.md  analyze-template.md  checklist-template.md  constitution.md  implement-template.md  learn-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
templates/commands/: acdd-tasks.md  adapt.md  analyze.md  checklist.md  clarify.md  constitution.md  implement.md  learn.md  plan.md  specify.md  tasks.md
