[project]
name = "acdd-cli"
version = "0.0.20"
description = "ACDD CLI, part of ACDD Kit. A tool to bootstrap your projects for Adaptive Context-Driven Development (ACDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
acdd = "acdd_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acdd_cli"]